Fixed invalid footer z-index

--- a/site/src/App/Footer/styles.module.css
+++ b/site/src/App/Footer/styles.module.css
@@ -1,4 +1,6 @@
 .footer {
+    z-index: -1;
+
     position: fixed;
     left: 0;
     bottom: 0;
